<resources>
    <string name="app_name">2PlayerGame</string>
    <string name="ticTitle">Tic Tac Toe</string>
    <string name="speedTitle">SpeedBalloon</string>
    <string name="tie">Tie !</string>
    <string name="win">is the winner !</string>
    <string name="player">Player</string>
    <string name="finish">Game is finished !</string>
    <string name="full">Box is already filled !</string>
    <string name="bBack">Back</string>
    <string name="bReset">Reset</string>
    <string name="bExit">Exit</string>
    <string name="bStart">Start</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="hangTitle">The Hangman</string>
    <string name="textHang">Enter a word from 3 to 16 letters</string>
    <string name="warningTitle">Warning</string>
    <string name="warningMessage">Warning the word is too small or too long !</string>
    <string name="better">can he do better ?</string>
    <string name="score">Your score is </string>
    <string name="looseMessage">Game Over !</string>
    <string name="winMessage">Congratulation you found the word !</string>
    <string name="again">Play again</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="leaveMessage">Do you really wants to leave ?</string>
    <string name="SBPlayer1">\'s turn :\nRules : Burst colored balloons but avoid black balloons, you have 1 minute !</string>
    <string name="SBStart"> Start </string>
    <string name="SBPlayer2">\'s turn, can he do better ?</string>
</resources>
