<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigTicTacToeActivity"
    tools:layout_editor_absoluteY="25dp"
    android:background="#292929">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="275dp"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a00000">

            <Button
                android:id="@+id/bStart"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:background="#292929"
                android:text="@string/bStart"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="381dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/player1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="105dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/player2"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:layout_marginTop="46dp"
        android:text="@string/speedTitle"
        android:textColor="@android:color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>