<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292929"
    tools:context=".ConfigTicTacToeActivity"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="313dp"
        android:layout_height="276dp"
        android:background="@drawable/line"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="237dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a00000">

            <Button
                android:id="@+id/bStart"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:background="#292929"
                android:text="@string/bStart"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/relativeLayout7"
                android:layout_width="230dp"
                android:layout_height="106dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="57dp">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/player2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editText" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/poutine" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/player1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="46dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/trump" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticTitle"
        android:textColor="@android:color/white"
        android:textSize="40dp"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="88dp" />

</android.support.constraint.ConstraintLayout>